fix(openproject) set tag version to 12.4.2

--- a/charts/incubator/openproject/values.yaml
+++ b/charts/incubator/openproject/values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: tccr.io/truecharts/openproject
   pullPolicy: IfNotPresent
-  tag: v12@sha256:d9f223fe3ba4724d48466de22ddaed8786b5998585bc93ec569ed91209aa6b06
+  tag: 12.4.2@sha256:0c2cf141b01c551f41cffe705f73738fa20ddc38467d4e72e812c84dc89141c3
 
 securityContext:
   readOnlyRootFilesystem: false
