--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -92,7 +92,7 @@ jobs:
               go-yq -i 'del(.sources.[])' "${chart}/Chart.yaml"
               # Add truechart source
               tcsource="https://github.com/truecharts/charts/tree/master/charts/$train/$chartname" go-yq -i '.sources += env(tcsource)' "${chart}/Chart.yaml"
-              container=$(cat website/docs/charts/description_list.md | grep "${chartname}" | cut -f3 -d '|' | grep -v 'Not Found')
+              container=$(cat website/docs/charts/description_list.md | grep "${chartname}" | cut -f3 -d '|' | grep -v 'Not Found' || echo "")
               if [ ! -z "$container" ]; then
                 container="${container}" go-yq -i '.sources += env(container)' "${chart}/Chart.yaml"
               fi
