--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -102,7 +102,7 @@ jobs:
                 elif echo ${container} | grep 'tccr'; then
                 prefix="https://github.com/truecharts/containers/tree/master/mirror/"
                 fi
-                container="${prefix}${container}" go-yq -i '.sources += env(container)' "${chart}/Chart.yaml"
+                container="${prefix}${container}" go-yq -i '.sources += env(container) | .sources |= unique' "${chart}/Chart.yaml"
               fi
               # Add the rest of the sources
               while IFS= read -r line; do
