fix(ci): Match chart against Markdown link text
More specifically match the chart to the container in the website's
description_list.md.  Since multiple charts contain the term "plex" and
not all of them are even Plex related, extraneous sources were being put
in the plex Chart.yaml.

Signed-off-by: Dan Christensen <opello@opello.org>

--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -92,7 +92,7 @@ jobs:
               go-yq -i 'del(.sources.[])' "${chart}/Chart.yaml"
               # Add truechart source
               tcsource="https://github.com/truecharts/charts/tree/master/charts/$train/$chartname" go-yq -i '.sources += env(tcsource)' "${chart}/Chart.yaml"
-              container=$(cat website/docs/charts/description_list.md | grep "${chartname}" | cut -f3 -d '|' | grep -v 'Not Found' || echo "")
+              container=$(cat website/docs/charts/description_list.md | grep "\[${chartname}\]" | cut -f3 -d '|' | grep -v 'Not Found' || echo "")
               if [ ! -z "$container" ]; then
                 prefix="https://hub.docker.com/"
                 if echo ${container} | grep 'ghcr'; then
