--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -92,7 +92,7 @@ jobs:
               go-yq -i 'del(.sources.[])' "${chart}/Chart.yaml"
               # Add truechart source
               tcsource="https://github.com/truecharts/charts/tree/master/charts/$train/$chartname" go-yq -i '.sources += env(tcsource)' "${chart}/Chart.yaml"
-              container=$(cat website/docs/charts/description_list.md | grep "${chartname}" | cut -f3 -d '|' | grep -v 'Not Found' || echo "")
+              container=$(cat website/docs/charts/description_list.md | grep "\[${chartname}\]" | cut -f3 -d '|' | grep -v 'Not Found' || echo "")
               if [ ! -z "$container" ]; then
                 prefix="https://hub.docker.com/"
                 if echo ${container} | grep 'ghcr'; then
@@ -102,7 +102,7 @@ jobs:
                 elif echo ${container} | grep 'tccr'; then
                 prefix="https://github.com/truecharts/containers/tree/master/mirror/"
                 fi
-                container="${prefix}${container}" go-yq -i '.sources += env(container)' "${chart}/Chart.yaml"
+                container="${prefix}${container}" go-yq -i '.sources += env(container) | .sources |= unique' "${chart}/Chart.yaml"
               fi
               # Add the rest of the sources
               while IFS= read -r line; do
