--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -89,7 +89,7 @@ jobs:
               # Get all sources (except truecharts)
               curr_sources=$(go-yq '.sources[] | select(. != "https://github.com/truecharts*" and . != "https://ghcr*" and . != "https://hub.docker*" and . != "https://quay*" and . != "https://github.com/truecharts/containers*")' "${chart}/Chart.yaml")
               # Empty sources list in-place
-              go-yq -i 'del(.sources.[])' "${chart}/Chart.yaml
+              go-yq -i 'del(.sources.[])' "${chart}/Chart.yaml"
               # Add truechart source
               tcsource="https://github.com/truecharts/charts/tree/master/charts/$train/$chartname" go-yq -i '.sources += env(tcsource)' "${chart}/Chart.yaml"
               container=$(cat website/docs/charts/description_list.md | grep "\[${chartname}\]" | cut -f3 -d '|' | grep -v 'Not Found' || echo "")
