--- a/charts/incubator/factorio/Chart.yaml
+++ b/charts/incubator/factorio/Chart.yaml
@@ -25,5 +25,6 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/incubator/factorio
   - https://www.factorio.com/
   - https://hub.docker.com/r/factoriotools/factorio/
+  - factoriotools/factorio
 type: application
 version: 3.0.0
