--- a/charts/incubator/factorio/Chart.yaml
+++ b/charts/incubator/factorio/Chart.yaml
@@ -23,8 +23,8 @@ maintainers:
 name: factorio
 sources:
   - https://github.com/truecharts/charts/tree/master/charts/incubator/factorio
+  - https://hub.docker.com/factoriotools/factorio
+  - factoriotools/factorio ofsm/ofsm
   - https://www.factorio.com/
-  - https://hub.docker.com/r/factoriotools/factorio/
-  - factoriotools/factorio
 type: application
 version: 3.0.0
