--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -87,21 +87,37 @@ jobs:
               echo "Attempting to update sources of ${chartname}..."
               echo "Using go-yq verion: <$(go-yq -V)>"
               # Get all sources (except truecharts)
-              curr_sources=$(go-yq '.sources[] | select(. != "https://github.com/truecharts*" and . != "https://ghcr*" and . != "https://hub.docker*" and . != "https://quay*" and . != "https://github.com/truecharts/containers*")' "${chart}/Chart.yaml")
+              curr_sources=$(go-yq '.sources[] | select(. != "https://github.com/truecharts*" and . != "https://ghcr*" and . != "https://hub.docker*" and . != "https://quay*" and . != "https://github.com/truecharts/containers*" and test("^https?://"))' "${chart}/Chart.yaml")
               # Empty sources list in-place
               go-yq -i 'del(.sources.[])' "${chart}/Chart.yaml"
               # Add truechart source
               tcsource="https://github.com/truecharts/charts/tree/master/charts/$train/$chartname" go-yq -i '.sources += env(tcsource)' "${chart}/Chart.yaml"
               container=$(cat website/docs/charts/description_list.md | grep "\[${chartname}\]" | cut -f3 -d '|' | grep -v 'Not Found' || echo "")
               if [ ! -z "$container" ]; then
-                prefix="https://hub.docker.com/"
-                if echo ${container} | grep 'ghcr'; then
-                prefix="https://ghcr.com/"
-                elif echo ${container} | grep 'quay'; then
-                prefix="https://quay.com/"
-                elif echo ${container} | grep 'tccr'; then
-                prefix="https://github.com/truecharts/containers/tree/master/mirror/"
-                fi
+                case "$container" in
+                  *ghcr*|*quay*)
+                    # Both ghcr.io and quay.io have nice redirection.
+                    prefix="https://"
+                    ;;
+                  *lscr*)
+                    # Images hosted on lscr.io seem to all be available on Docker Hub under the linuxserver user.
+                    prefix="https://hub.docker.com/r/linuxserver/"
+                    # Get the image name without any pathing.
+                    container="${container##*/}"
+                    ;;
+                  *tccr*)
+                    prefix="https://github.com/truecharts/containers/tree/master/mirror/"
+                    # Get the image name without any pathing.
+                    container="${container##*/}"
+                    ;;
+                  *)
+                    prefix="https://hub.docker.com/r/"
+                    # If the image name does not contain a slash it is a Docker Official Image.
+                    if [ "$container" == "${container////}" ]; then
+                      prefix="https://hub.docker.com/_/"
+                    fi
+                  ;;
+                esac
                 container="${prefix}${container}" go-yq -i '.sources += env(container) | .sources |= unique' "${chart}/Chart.yaml"
               fi
               # Add the rest of the sources
@@ -109,7 +125,7 @@ jobs:
                 src="$line" go-yq -i '.sources += env(src)' "${chart}/Chart.yaml" || echo "src set error"
               done <<< "$curr_sources"
               echo "Sources of ${chartname} updated!"
-              }
+          }
           export -f sync_tag
 
           for train in enterprise stable incubator dependency; do
