If the CI wants OFSM/OFSM then I dunno

--- a/charts/incubator/factorio/Chart.yaml
+++ b/charts/incubator/factorio/Chart.yaml
@@ -24,7 +24,7 @@ name: factorio
 sources:
   - https://github.com/truecharts/charts/tree/master/charts/incubator/factorio
   - https://hub.docker.com/factoriotools/factorio
-  - factoriotools/factorio ofsm/ofsm
+  - factoriotools/factorio
   - https://www.factorio.com/
 type: application
 version: 3.0.0
