--- a/charts/incubator/plexripper/values.yaml
+++ b/charts/incubator/plexripper/values.yaml
@@ -1,34 +1,28 @@
-env: {}
 image:
   pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/plexripper
-  tag: latest@sha256:423b510798fe8bad9b3514b5358cb61cc2a2e0160118db2d1665898eb7c33430
-persistence:
-  config:
-    enabled: true
-    mountPath: /config
-  downloadfolder:
-    enabled: true
-    mountPath: /downloads
-  moviedestinationfolder:
-    enabled: true
-    mountPath: /movies
-  tv-showdestinationfolder:
-    enabled: true
-    mountPath: /tvshows
+  tag: 0.9.1@sha256:087f1d58cb963e1bbfd0c31d8fcb09f7719685e7647d668a49ebe21cbbef66c9
+
 podSecurityContext:
   runAsGroup: 0
   runAsUser: 0
+
 securityContext:
   readOnlyRootFilesystem: false
   runAsNonRoot: false
+
 service:
   main:
     ports:
       main:
         port: 7000
-        protocol: TCP
+        protocol: HTTP
         targetPort: 7000
+
+persistence:
+  config:
+    enabled: true
+    mountPath: /Config
 
 portal:
   enabled: true
