--- a/charts/stable/libremdb/Chart.yaml
+++ b/charts/stable/libremdb/Chart.yaml
@@ -22,7 +22,7 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
+deprecated: true
 description: A free & open source IMDb front-end.
 home: https://truecharts.org/charts/stable/libremdb
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/libremdb.webp
@@ -42,4 +42,4 @@ sources:
   - https://github.com/zyachel/libremdb
   - https://quay.io/pussthecatorg/libremdb
 type: application
-version: 9.5.6
+version: 10.0.0
