--- a/renovate/main.json5
+++ b/renovate/main.json5
@@ -53,5 +53,6 @@
   ],
   "ignoreDeps": [
     // List any dependencies to ignore globally if needed
-  ]
+  ],
+  "ignorePaths": ["**/*.sops.*", "**/.archive/**", "**/resources/**"],
 }
