--- a/renovate/main.json5
+++ b/renovate/main.json5
@@ -54,5 +54,5 @@
   "ignoreDeps": [
     // List any dependencies to ignore globally if needed
   ],
-  "ignorePaths": ["**/*.sops.*", "**/.archive/**", "**/resources/**"],
+  "ignorePaths": ["**/*.sops.*", "**/.archive/**","**/archive/**", "**/resources/**"],
 }
