--- a/renovate/main.json5
+++ b/renovate/main.json5
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   // Main Renovate configuration that lists package rules for various paths
   "packageRules": [
     {
