--- a/renovate/main.json5
+++ b/renovate/main.json5
@@ -1,6 +1,3 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "packageRules": [
-
-  ]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
 }
