--- a/.github/renovate/folders/charts.json5
+++ b/.github/renovate/folders/charts.json5
@@ -1,13 +1,6 @@
 {
+      "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   extends: [
-    "config:base",
-    "helm"
-  ],
-  packageRules: [
-    {
-      matchPackagePatterns: ["*"],
-      updateTypes: ["minor", "patch"],
-      enabled: true,
-    },
+
   ]
 }
