--- a/.github/renovate/folders/website.json5
+++ b/.github/renovate/folders/website.json5
@@ -1,4 +1,7 @@
 
 {
-      "$schema": "https://docs.renovatebot.com/renovate-schema.json"
+      "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+      "extends": [
+        "github>truecharts/public//.github/renovate/kinds/astro.json5"
+      ]
 }
