--- a/.github/renovate/kinds/helm.json5
+++ b/.github/renovate/kinds/helm.json5
@@ -1,4 +1,6 @@
 {
+      "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+
   "helm": {
     "fileMatch": [
       "Chart\\.ya?ml(?:\\.j2)?$" // Matches Chart.yaml or Chart.yml files, optionally with a .j2 extension
