--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -1,5 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+     "extends": [
+        "github>truecharts/public//.github/renovate/updates/digest.json5",
+        "github>truecharts/public//.github/renovate/updates/update.json5",
+        "github>truecharts/public//.github/renovate/updates/minor.json5",
+        "github>truecharts/public//.github/renovate/updates/major.json5",
+        "github>truecharts/public//.github/renovate/updates/calver.json5",
+        "github>truecharts/public//.github/renovate/special/automerge.json5"
+      ]
   // Main Renovate configuration that lists package rules for various paths
   "packageRules": [
     {
