--- a/.github/renovate/kinds/go.json5
+++ b/.github/renovate/kinds/go.json5
@@ -11,7 +11,8 @@
     "updateTypes": ["major", "minor", "patch", "digest"], // Allow updates for all version types
     "ignore": [
       // Specify any modules or versions to ignore
-    ]
+    ],
+    "semanticCommitScope": "go",
   },
   "ignoreDeps": [
     // List any dependencies to ignore globally if needed
