--- a/.github/renovate/kinds/helm.json5
+++ b/.github/renovate/kinds/helm.json5
@@ -6,6 +6,7 @@
       "Chart\\.ya?ml(?:\\.j2)?$" // Matches Chart.yaml or Chart.yml files, optionally with a .j2 extension
     ],
     "enabled": true, // Enable Helm chart updates
+    "semanticCommitScope": "helm",
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
     "commitMessageSuffix": "fix: update Helm chart" // Customize commit message suffix
   },
