--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -6,7 +6,9 @@
         "github>truecharts/public//.github/renovate/updates/minor.json5",
         "github>truecharts/public//.github/renovate/updates/major.json5",
         "github>truecharts/public//.github/renovate/updates/calver.json5",
-        "github>truecharts/public//.github/renovate/special/automerge.json5"
+        "github>truecharts/public//.github/renovate/basics/commitMessage.json5",
+        "github>truecharts/public//.github/renovate/basics/labels.json5",
+        "github>truecharts/public//.github/renovate/special/groups.json5"
       ]
   // Main Renovate configuration that lists package rules for various paths
   "packageRules": [
