--- a/.github/renovate/updates/digest.json5
+++ b/.github/renovate/updates/digest.json5
@@ -2,8 +2,7 @@
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "digest": {
     "enabled": true, // Enable digest updates
-    "automerge": true,
-    "commitMessageSuffix": "fix: update image digest" // Customize commit message suffix for digest updates
+    "automerge": true
   },
   "ignore": [
     // Add any paths or patterns to ignore specific digest updates, if necessary
