--- a/.github/renovate/updates/major.json5
+++ b/.github/renovate/updates/major.json5
@@ -1,8 +1,7 @@
 {
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "major": {
-    "enabled": true, // Enable minor updates
-    "commitMessageSuffix": "major: BREAKING CHANGE update dependencies" // Customize commit message suffix for minor updates
+    "enabled": true // Enable minor updates
   },
   "ignore": [
     // Add any paths or patterns to ignore specific minor updates, if necessary
